--- a/index.html
+++ b/index.html
@@ -6,18 +6,27 @@
         <link rel="stylesheet" href="stylo.css">
     </head>
     <body>
-        <h1>Simple calculator</h1>
+        
         <div id="numbersContainer">
-            <div class="btn">1</div>
-            <div class="btn">2</div>
-            <div class="btn">3</div>
-            <div class="btn">4</div>
-            <div class="btn">5</div>
-            <div class="btn">6</div>
-            <div class="btn">7</div>
-            <div class="btn">8</div>
-            <div class="btn">9</div>
-            <div class="btn">0</div>
+            <button type="button" id="btnDelete">Delete</button>
+            <button type="button" id="btnbuttonide">/</button>
+            <button type="button" id="btnMultiply">*</button>
+            <button type="button" id="btnSubstract">-</button>
+            <button type="button" id="btnSeven">7</button>
+            <button type="button" id="btnEight">8</button>
+            <button type="button" id="btnNine">9</button>
+            <button type="button" id="btnPlus">+</button>
+            <button type="button" id="btnFour">4</button>
+            <button type="button" id="btnFive">5</button>
+            <button type="button" id="btnSix">6</button>
+            <button type="button" id="btnOne">1</button>
+            <button type="button" id="btnTwo">2</button>
+            <button type="button" id="btnDecimal">.</button>
+            <button type="button" id="btnThree">3</button>
+            <button type="button" id="btnEnter">Enter</button>
+            <button type="button" id="btnZero">0</button>
+            <button type="button" id="btnLogo">Logo</button>
+            <button type="button" id="btnPic">Pic</button>
         </div>
 
 
