added two buttons on top to to recreate the original numpad

--- a/index.html
+++ b/index.html
@@ -6,30 +6,36 @@
         <link rel="stylesheet" href="stylo.css">
     </head>
     <body>
-        
-        <div id="numbersContainer">
-            <button type="button" id="btnDelete">Delete</button>
-            <button type="button" id="btnbuttonide">/</button>
-            <button type="button" id="btnMultiply">*</button>
-            <button type="button" id="btnSubstract">-</button>
-            <button type="button" id="btnSeven">7</button>
-            <button type="button" id="btnEight">8</button>
-            <button type="button" id="btnNine">9</button>
-            <button type="button" id="btnPlus">+</button>
-            <button type="button" id="btnFour">4</button>
-            <button type="button" id="btnFive">5</button>
-            <button type="button" id="btnSix">6</button>
-            <button type="button" id="btnOne">1</button>
-            <button type="button" id="btnTwo">2</button>
-            <button type="button" id="btnDecimal">.</button>
-            <button type="button" id="btnThree">3</button>
-            <button type="button" id="btnEnter">Enter</button>
-            <button type="button" id="btnZero">0</button>
-            <button type="button" id="btnLogo">Logo</button>
-            <button type="button" id="btnPic">Pic</button>
+        <div id="gridContainer">
+            <div id="topContainer">
+                <button type="button" id="btnPic">Pic</button>
+                <div class="box-container">
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                </div>
+            </div>
+            <div id="numpadContainer">
+                <button type="button" id="btnDelete">Delete</button>
+                <button type="button" id="btnslash">/</button>
+                <button type="button" id="btnMultiply">*</button>
+                <button type="button" id="btnMinus">-</button>
+                <button type="button" id="btnSeven">7</button>
+                <button type="button" id="btnEight">8</button>
+                <button type="button" id="btnNine">9</button>
+                <button type="button" id="btnPlus">+</button>
+                <button type="button" id="btnFour">4</button>
+                <button type="button" id="btnFive">5</button>
+                <button type="button" id="btnSix">6</button>
+                <button type="button" id="btnOne">1</button>
+                <button type="button" id="btnTwo">2</button>
+                <button type="button" id="btnDecimal">.</button>
+                <button type="button" id="btnThree">3</button>
+                <button type="button" id="btnEnter">Enter</button>
+                <button type="button" id="btnZero">0</button>
+            </div>
         </div>
-
-
         <script src="script.js"></script>
     </body>
 </html>
