--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="gridContainer">
             <div id="topContainer">
-                <button type="button" id="btnPic">Pic</button>
+                <button type="button" id="btnPic"></button>
                 <div class="box-container">
                     <div class="grid-item"></div>
                     <div class="grid-item"></div>
@@ -17,10 +17,10 @@
                 </div>
             </div>
             <div id="numpadContainer">
-                <button type="button" id="btnDelete">Delete</button>
+                <button type="button" id="btnDelete">D</button>
                 <button type="button" id="btnslash">/</button>
                 <button type="button" id="btnMultiply">*</button>
-                <button type="button" id="btnMinus">-</button>
+                <button type="button" id="btnMinus">—</button>
                 <button type="button" id="btnSeven">7</button>
                 <button type="button" id="btnEight">8</button>
                 <button type="button" id="btnNine">9</button>
