added hover effects to icon and numbers

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 </div>
             </div>
             <div id="numpadContainer">
-                <button type="button" id="btnDelete">D</button>
-                <button type="button" id="btnslash">/</button>
-                <button type="button" id="btnMultiply">*</button>
-                <button type="button" id="btnMinus">—</button>
-                <button type="button" id="btnSeven">7</button>
+                <button type="button" id="btnDelete" value="delete">D</button>
+                <button type="button" id="btnslash" value="divide">/</button>
+                <button type="button" id="btnMultiply" value="multiply">*</button>
+                <button type="button" id="btnMinus" value="minus">-</button>
+                <button type="button" id="btnSeven" value="7">7</button>
                 <button type="button" id="btnEight">8</button>
                 <button type="button" id="btnNine">9</button>
                 <button type="button" id="btnPlus">+</button>
