finished adding popup error message to the left of the numpad

--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
         <link rel="stylesheet" href="stylo.css">
     </head>
     <body>
+        <div class="popup">
+            <div class="top-bar">
+              <span class="btnClose"></span>
+              <div id="untitled">untitledartproject_v4.psd</div>
+            </div>
+            <div class="content"></div>
+          </div>
+
+          <div class="popup-left">
+            <div class="top-bar-left">credits to @saintjulianxv
+              <span class="btnClose-left"></span>
+              <div id="untitled-2"></div>
+            </div>
+                
+                <div class="content-2">
+                    <span class="btnError"></span>
+                    <div class="error">An unexpected error has occurred</div>
+                </div>
+                <span class="close-btn">Close</span>
+          </div>
+
+
         <div id="gridContainer">
             <div id="topContainer">
-                <button type="button" id="btnPic"></button>
+                <button type="button" id="btnPic">C</button>
                 <div class="box-container">
                     <div class="grid-item"></div>
                     <div class="grid-item"></div>
