added event listener to display the values of each button pressed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
               <span class="btnClose"></span>
               <div id="untitled">untitledartproject_v4.psd</div>
             </div>
-            <div class="content"></div>
+            <div class="display"></div>
           </div>
 
           <div class="popup-left">
@@ -44,18 +44,18 @@
                 <button type="button" id="btnMultiply" value="multiply">*</button>
                 <button type="button" id="btnMinus" value="minus">-</button>
                 <button type="button" id="btnSeven" value="7">7</button>
-                <button type="button" id="btnEight">8</button>
-                <button type="button" id="btnNine">9</button>
-                <button type="button" id="btnPlus">+</button>
-                <button type="button" id="btnFour">4</button>
-                <button type="button" id="btnFive">5</button>
-                <button type="button" id="btnSix">6</button>
-                <button type="button" id="btnOne">1</button>
-                <button type="button" id="btnTwo">2</button>
-                <button type="button" id="btnDecimal">.</button>
-                <button type="button" id="btnThree">3</button>
-                <button type="button" id="btnEnter">Enter</button>
-                <button type="button" id="btnZero">0</button>
+                <button type="button" id="btnEight" value="8">8</button>
+                <button type="button" id="btnNine" value="9">9</button>
+                <button type="button" id="btnPlus" value="+">+</button>
+                <button type="button" id="btnFour" value="4">4</button>
+                <button type="button" id="btnFive" value="5">5</button>
+                <button type="button" id="btnSix" value="6">6</button>
+                <button type="button" id="btnOne" value="1">1</button>
+                <button type="button" id="btnTwo" value="2">2</button>
+                <button type="button" id="btnDecimal"value="." >.</button>
+                <button type="button" id="btnThree" value="3">3</button>
+                <button type="button" id="btnEnter" value="enter">Enter</button>
+                <button type="button" id="btnZero" value="0">0</button>
             </div>
         </div>
         <script src="script.js"></script>
