added clear functionality by eventlistener to variable clear

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div id="gridContainer">
             <div id="topContainer">
-                <button type="button" id="btnPic">C</button>
+                <button type="button" id="clearAll">C</button>
                 <div class="box-container">
                     <div class="grid-item"></div>
                     <div class="grid-item"></div>
