--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button type="button" id="btnTwo" value="2" class='number'>2</button>
             <button type="button" id="btnDecimal"value="." class='number'>.</button>
             <button type="button" id="btnThree" value="3" class='number'>3</button>
-            <button type="button" id="btnEnter" value="Enter" class='action'>Enter</button>
+            <button type="button" id="btnEnter" value="=" class='action'>Enter</button>
             <button type="button" id="btnZero" value="0" class='number'>0</button>
         </div>
     </div>
