added second display to record current symbol

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="popup">
         <div class="top-bar">
           <span class="btnClose"></span>
-          <div id="untitled">untitledartproject_v4.psd</div>
+          <div id="untitled"></div>
         </div>
         <div class="display"></div>
       </div>
 
       <div class="popup-left">
-        <div class="top-bar-left">credits to @saintjulianxv
+        <div class="top-bar-left">
           <span class="btnClose-left"></span>
           <div id="untitled-2"></div>
         </div>
@@ -25,7 +25,7 @@
                 <span class="btnError"></span>
                 <div class="error">An unexpected error has occurred</div>
             </div>
-            <span class="close-btn">Close</span>
+            <span id='close-popUp'class="close-btn">Close</span>
       </div>
 
 
